force-app/main/default/objects/Work_Order_Durations__c/Work_Order_Durations__c.object-meta.xml
<CustomObject>
    <description>Testing work order status calculations</description>
    <label>Work Order Durations</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Work Order Durations</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Durations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>