force-app/main/default/objects/Work_Order_Durations__c/fields/Calculated_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Seconds__c</fullName>
    <formula>(Until__c - From__c) * 86400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>