force-app/main/default/objects/Work_Order_Durations__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>TextArea</type>
</CustomField>