force-app/main/default/objects/Work_Order_Durations__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>Input Work Order number.</description>
    <label>Parent</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Order Durations</relationshipLabel>
    <relationshipName>Work_Order_Durations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>