force-app/main/default/objects/Work_Order_Durations__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>Calculated_Seconds__c / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>